fix additional mobile overflow errors

--- a/_custom-theme/assets/css/global.scss
+++ b/_custom-theme/assets/css/global.scss
@@ -140,24 +140,26 @@ button {
   max-width: 1200px;
   margin: auto;
   padding: 20px;
+  word-break: break-word;
 }
 
 // Video Embed Responsive
 
 .embed-wrapper {
-    position: relative;
-    padding-bottom: 56.25%;
-    padding-top: 30px;
-    height: 0;
-    overflow: hidden;
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
 }
 
 .embed-wrapper iframe,
 .embed-wrapper object,
 .embed-wrapper embed {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  margin: auto;
 }
