--- a/_custom-theme/assets/css/pages/music.scss
+++ b/_custom-theme/assets/css/pages/music.scss
@@ -1,7 +1,6 @@
 [data-page="music"] {
 
   .musicframes { text-align: center; }
-  iframe { margin: 10px; }
   .embed-wrapper {margin-bottom: 20px;}
-  
+
 }
